[package]
name = "dbox"
version = "0.1.3"
authors = ["Paul Woolcock <paul@woolcock.us>"]
license = "MIT/Apache-2.0"
readme = "README.adoc"
description = """
An unofficial Dropbox SDK
"""
repository = "https://gitlab.com/pwoolcoc/dbox.git"
homepage = "https://pwoolcoc.gitlab.io/dbox/dbox/"

[features]
default = ["hyper-client"]
hyper-client = ["hyper"]

[dependencies]
hyper = { version = "~0.7.2", optional = true }
chrono = "~0.2.17"
rustc-serialize = "~0.3"

[dev-dependencies]
rand = "~0.3.12"
